<resources>

    <item name="visible" type="id" />
    <item name="masked" type="id" />
    <string name="app_name">Penaku</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="title_activity_login">Sign in</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="edit">Edit</string>
    <string name="kirim">Kirim</string>
    <string name="tulis">Tulis</string>
    <string name="judul">Judul</string>
    <string name="ceritamu">Ceritamu</string>
    <string name="full_name">Full Name</string>
    <string name="todo">TODO</string>
    <string name="daftar_akun_baru">Daftar Akun Baru!</string>
    <string name="nama_lengkap">Nama Lengkap</string>
    <string name="sudah_memiliki_akun_masuk_login_disini">Sudah memiliki Akun! Masuk Login disini</string>
    <string name="email">Email</string>
    <string name="Password">Password</string>
    <string name="deskripsi_cerita">Deskripsi Cerita</string>
    <string name="tulis_cerita">Tulis Cerita</string>
    <string name="pilih_file">Pilih file</string>
    <string name="post_cerita">Post Cerita</string>
    <string name="profil">Profil</string>
    <string name="batal">Batal</string>
    <string name="masuk">Masuk</string>
    <string name="posting">Posting</string>
    <string name="title_activity_home">Home</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
</resources>
