<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.creativate.app.penaku.RegisterActivity">

    <ScrollView
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:fillViewport="true">
        <RelativeLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content" android:background="#fff">

            <!--  Header  Starts-->
            <LinearLayout android:id="@+id/header"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:paddingTop="5dip"
                android:paddingBottom="5dip">
                <!-- Logo Start-->
                <ImageView android:src=""
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="10dip" android:contentDescription="@string/todo" />
                <!-- Logo Ends -->
            </LinearLayout>
            <!--  Header Ends -->
            <!-- Footer Start -->
            <LinearLayout android:id="@+id/footer"
                android:layout_width="fill_parent"
                android:layout_height="90dip"
                android:background=""
                android:layout_alignParentBottom="true" android:orientation="horizontal">
            </LinearLayout>
            <!-- Footer Ends -->

            <!-- Registration Form -->
            <LinearLayout

                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="10dip"
                android:layout_below="@id/header">
                <!-- Full Name Label -->
                <TextView android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:textColor="#372c24"
                    android:text="@string/nama_lengkap"
                    android:labelFor="@+id/reg_fullname"
                    />

                <EditText
                    android:id="@+id/reg_fullname"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="20dip"
                    android:layout_marginTop="5dip"
                    android:inputType="text"
                    android:singleLine="true" />
                <!--  Email Label -->
                <TextView android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:textColor="#372c24"
                    android:text="@string/email"
                    android:labelFor="@+id/reg_email"
                    />

                <EditText
                    android:id="@+id/reg_email"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="20dip"
                    android:layout_marginTop="5dip"
                    android:inputType="textEmailAddress"
                    android:singleLine="true" />
                <!-- Password Label -->
                <TextView
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/password"
                    android:textColor="#372c24"
                    android:labelFor="@+id/reg_password"
                    />

                <EditText
                    android:id="@+id/reg_password"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dip"
                    android:inputType="textPassword|textVisiblePassword"
                    android:singleLine="true" />
                <!-- Register Button -->
                <Button android:id="@+id/btnRegister"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dip"
                    android:text="@string/daftar_akun_baru"/>
                <!-- Link to Login Screen -->
                <TextView android:id="@+id/link_to_login"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="40dip"
                    android:layout_marginBottom="40dip"
                    android:text="@string/sudah_memiliki_akun_masuk_login_disini"
                    android:gravity="center"
                    android:textSize="20sp"
                    android:textColor="#025f7c"/>

            </LinearLayout>
            <!-- Registration Form Ends -->
        </RelativeLayout>
    </ScrollView>

</android.support.constraint.ConstraintLayout>
